tests/parsing/smtlib/poly/errors/xxx_declare_datatypes_mismatched_lists.psmt2
(set-logic ALL)

(declare-datatypes
  ( (foo 0) (bar 0) )
  ( ( (f) ) )
)
